tests/compile-fail/bad_include_literal.stderr
error: include array elements must be string literals or tuples
       help: use `include = ["file.txt"]` or `include = [("source.txt", "dest.txt")]`
  --> tests/compile-fail/bad_include_literal.rs:11:20
   |
11 | #[assay(include = [123])]
   |                    ^^^
